[gd_scene load_steps=23 format=3 uid="uid://c8ld4mgspflab"]

[ext_resource type="Script" path="res://gui/components/preview/PianoRoll.gd" id="1_nfgs2"]
[ext_resource type="Script" path="res://gui/components/preview/PianoContainer.gd" id="2_kmleb"]
[ext_resource type="PackedScene" uid="uid://dt8h6osxvf3im" path="res://gui/components/preview/PianoKey.tscn" id="3_5hvlp"]
[ext_resource type="Shader" path="res://gui/components/preview/PianoKey.gdshader" id="4_6grup"]
[ext_resource type="PackedScene" uid="uid://gprht0fu6hyh" path="res://gui/components/GlowButton.tscn" id="5_cudr8"]
[ext_resource type="Shader" path="res://gui/components/GlowLabel.gdshader" id="6_l44rt"]
[ext_resource type="Texture2D" uid="uid://dpqpjg2tljk2q" path="res://assets/icons/arrow_up.png" id="6_r4x0v"]
[ext_resource type="PackedScene" uid="uid://chq8boo5j014r" path="res://gui/components/ElectronicLabel.tscn" id="7_g2f1f"]
[ext_resource type="Texture2D" uid="uid://bs4nps2xcum7l" path="res://assets/icons/arrow_down.png" id="9_50rvi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_36g26"]
resource_local_to_scene = true
shader = ExtResource("4_6grup")
shader_parameter/state_pressed = 0.0
shader_parameter/state_selected = false
shader_parameter/inset_left = false
shader_parameter/inset_right = true
shader_parameter/shadow_position = 0.212
shader_parameter/shadow_size = 0.08
shader_parameter/shadow_compensation = 0.0
shader_parameter/inset_height = 0.382
shader_parameter/inset_smoothness = 0.024
shader_parameter/inset_shadow_position = 0.019
shader_parameter/inset_shadow_size = 0.022
shader_parameter/selection_x_factor = 2.6
shader_parameter/selection_offset = 0.8
shader_parameter/selection_size = 0.066
shader_parameter/selection_smoothness = 0.006
shader_parameter/selection_color = Color(0.710837, 0.283876, 0.25255, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k8tkt"]
resource_local_to_scene = true
shader = ExtResource("4_6grup")
shader_parameter/state_pressed = 0.0
shader_parameter/state_selected = false
shader_parameter/inset_left = false
shader_parameter/inset_right = false
shader_parameter/shadow_position = 0.212
shader_parameter/shadow_size = 0.08
shader_parameter/shadow_compensation = 0.05
shader_parameter/inset_height = 0.382
shader_parameter/inset_smoothness = 0.024
shader_parameter/inset_shadow_position = 0.019
shader_parameter/inset_shadow_size = 0.022
shader_parameter/selection_x_factor = 2.6
shader_parameter/selection_offset = 0.8
shader_parameter/selection_size = 0.066
shader_parameter/selection_smoothness = 0.006
shader_parameter/selection_color = Color(0.710837, 0.283876, 0.25255, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vfrc8"]
resource_local_to_scene = true
shader = ExtResource("4_6grup")
shader_parameter/state_pressed = 0.0
shader_parameter/state_selected = false
shader_parameter/inset_left = true
shader_parameter/inset_right = true
shader_parameter/shadow_position = 0.212
shader_parameter/shadow_size = 0.08
shader_parameter/shadow_compensation = 0.0
shader_parameter/inset_height = 0.382
shader_parameter/inset_smoothness = 0.024
shader_parameter/inset_shadow_position = 0.019
shader_parameter/inset_shadow_size = 0.022
shader_parameter/selection_x_factor = 2.6
shader_parameter/selection_offset = 0.8
shader_parameter/selection_size = 0.066
shader_parameter/selection_smoothness = 0.006
shader_parameter/selection_color = Color(0.710837, 0.283876, 0.25255, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_311y6"]
resource_local_to_scene = true
shader = ExtResource("4_6grup")
shader_parameter/state_pressed = 0.0
shader_parameter/state_selected = false
shader_parameter/inset_left = false
shader_parameter/inset_right = false
shader_parameter/shadow_position = 0.212
shader_parameter/shadow_size = 0.08
shader_parameter/shadow_compensation = 0.05
shader_parameter/inset_height = 0.382
shader_parameter/inset_smoothness = 0.024
shader_parameter/inset_shadow_position = 0.019
shader_parameter/inset_shadow_size = 0.022
shader_parameter/selection_x_factor = 2.6
shader_parameter/selection_offset = 0.8
shader_parameter/selection_size = 0.066
shader_parameter/selection_smoothness = 0.006
shader_parameter/selection_color = Color(0.710837, 0.283876, 0.25255, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wdfbl"]
resource_local_to_scene = true
shader = ExtResource("4_6grup")
shader_parameter/state_pressed = 0.0
shader_parameter/state_selected = false
shader_parameter/inset_left = true
shader_parameter/inset_right = false
shader_parameter/shadow_position = 0.212
shader_parameter/shadow_size = 0.08
shader_parameter/shadow_compensation = 0.0
shader_parameter/inset_height = 0.382
shader_parameter/inset_smoothness = 0.024
shader_parameter/inset_shadow_position = 0.019
shader_parameter/inset_shadow_size = 0.022
shader_parameter/selection_x_factor = 2.6
shader_parameter/selection_offset = 0.8
shader_parameter/selection_size = 0.066
shader_parameter/selection_smoothness = 0.006
shader_parameter/selection_color = Color(0.710837, 0.283876, 0.25255, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cddi8"]
resource_local_to_scene = true
shader = ExtResource("4_6grup")
shader_parameter/state_pressed = 0.0
shader_parameter/state_selected = false
shader_parameter/inset_left = false
shader_parameter/inset_right = true
shader_parameter/shadow_position = 0.212
shader_parameter/shadow_size = 0.08
shader_parameter/shadow_compensation = 0.0
shader_parameter/inset_height = 0.382
shader_parameter/inset_smoothness = 0.024
shader_parameter/inset_shadow_position = 0.019
shader_parameter/inset_shadow_size = 0.022
shader_parameter/selection_x_factor = 2.6
shader_parameter/selection_offset = 0.8
shader_parameter/selection_size = 0.066
shader_parameter/selection_smoothness = 0.006
shader_parameter/selection_color = Color(0.710837, 0.283876, 0.25255, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hyj56"]
resource_local_to_scene = true
shader = ExtResource("4_6grup")
shader_parameter/state_pressed = 0.0
shader_parameter/state_selected = false
shader_parameter/inset_left = false
shader_parameter/inset_right = false
shader_parameter/shadow_position = 0.212
shader_parameter/shadow_size = 0.08
shader_parameter/shadow_compensation = 0.05
shader_parameter/inset_height = 0.382
shader_parameter/inset_smoothness = 0.024
shader_parameter/inset_shadow_position = 0.019
shader_parameter/inset_shadow_size = 0.022
shader_parameter/selection_x_factor = 2.6
shader_parameter/selection_offset = 0.8
shader_parameter/selection_size = 0.066
shader_parameter/selection_smoothness = 0.006
shader_parameter/selection_color = Color(0.710837, 0.283876, 0.25255, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0hgrt"]
resource_local_to_scene = true
shader = ExtResource("4_6grup")
shader_parameter/state_pressed = 0.0
shader_parameter/state_selected = false
shader_parameter/inset_left = true
shader_parameter/inset_right = true
shader_parameter/shadow_position = 0.212
shader_parameter/shadow_size = 0.08
shader_parameter/shadow_compensation = 0.0
shader_parameter/inset_height = 0.382
shader_parameter/inset_smoothness = 0.024
shader_parameter/inset_shadow_position = 0.019
shader_parameter/inset_shadow_size = 0.022
shader_parameter/selection_x_factor = 2.6
shader_parameter/selection_offset = 0.8
shader_parameter/selection_size = 0.066
shader_parameter/selection_smoothness = 0.006
shader_parameter/selection_color = Color(0.710837, 0.283876, 0.25255, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y3j7m"]
resource_local_to_scene = true
shader = ExtResource("4_6grup")
shader_parameter/state_pressed = 0.0
shader_parameter/state_selected = false
shader_parameter/inset_left = false
shader_parameter/inset_right = false
shader_parameter/shadow_position = 0.212
shader_parameter/shadow_size = 0.08
shader_parameter/shadow_compensation = 0.05
shader_parameter/inset_height = 0.382
shader_parameter/inset_smoothness = 0.024
shader_parameter/inset_shadow_position = 0.019
shader_parameter/inset_shadow_size = 0.022
shader_parameter/selection_x_factor = 2.6
shader_parameter/selection_offset = 0.8
shader_parameter/selection_size = 0.066
shader_parameter/selection_smoothness = 0.006
shader_parameter/selection_color = Color(0.710837, 0.283876, 0.25255, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qftt6"]
resource_local_to_scene = true
shader = ExtResource("4_6grup")
shader_parameter/state_pressed = 0.0
shader_parameter/state_selected = false
shader_parameter/inset_left = true
shader_parameter/inset_right = true
shader_parameter/shadow_position = 0.212
shader_parameter/shadow_size = 0.08
shader_parameter/shadow_compensation = 0.0
shader_parameter/inset_height = 0.382
shader_parameter/inset_smoothness = 0.024
shader_parameter/inset_shadow_position = 0.019
shader_parameter/inset_shadow_size = 0.022
shader_parameter/selection_x_factor = 2.6
shader_parameter/selection_offset = 0.8
shader_parameter/selection_size = 0.066
shader_parameter/selection_smoothness = 0.006
shader_parameter/selection_color = Color(0.710837, 0.283876, 0.25255, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ltvl0"]
resource_local_to_scene = true
shader = ExtResource("4_6grup")
shader_parameter/state_pressed = 0.0
shader_parameter/state_selected = false
shader_parameter/inset_left = false
shader_parameter/inset_right = false
shader_parameter/shadow_position = 0.212
shader_parameter/shadow_size = 0.08
shader_parameter/shadow_compensation = 0.05
shader_parameter/inset_height = 0.382
shader_parameter/inset_smoothness = 0.024
shader_parameter/inset_shadow_position = 0.019
shader_parameter/inset_shadow_size = 0.022
shader_parameter/selection_x_factor = 2.6
shader_parameter/selection_offset = 0.8
shader_parameter/selection_size = 0.066
shader_parameter/selection_smoothness = 0.006
shader_parameter/selection_color = Color(0.710837, 0.283876, 0.25255, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uegwx"]
resource_local_to_scene = true
shader = ExtResource("4_6grup")
shader_parameter/state_pressed = 0.0
shader_parameter/state_selected = false
shader_parameter/inset_left = true
shader_parameter/inset_right = false
shader_parameter/shadow_position = 0.212
shader_parameter/shadow_size = 0.08
shader_parameter/shadow_compensation = 0.0
shader_parameter/inset_height = 0.382
shader_parameter/inset_smoothness = 0.024
shader_parameter/inset_shadow_position = 0.019
shader_parameter/inset_shadow_size = 0.022
shader_parameter/selection_x_factor = 2.6
shader_parameter/selection_offset = 0.8
shader_parameter/selection_size = 0.066
shader_parameter/selection_smoothness = 0.006
shader_parameter/selection_color = Color(0.710837, 0.283876, 0.25255, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mjkw2"]
resource_local_to_scene = true
shader = ExtResource("6_l44rt")
shader_parameter/direction = Vector2(1, 0)
shader_parameter/intensity = 0.82

[node name="PianoRoll" type="MarginContainer"]
offset_right = 252.0
offset_bottom = 100.0
script = ExtResource("1_nfgs2")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 2
color = Color(0.116668, 0.109648, 0.106619, 1)

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Labels" type="HBoxContainer" parent="Layout"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Padding" type="Control" parent="Layout/Labels"]
custom_minimum_size = Vector2(6, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Layout/Labels"]
layout_mode = 2
text = "NOTE"

[node name="Spacer" type="Control" parent="Layout/Labels"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="Layout/Labels"]
layout_mode = 2
text = "OCT"

[node name="Padding2" type="Control" parent="Layout/Labels"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="Widgets" type="HBoxContainer" parent="Layout"]
layout_mode = 2

[node name="Keys" type="MarginContainer" parent="Layout/Widgets"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Background" type="ColorRect" parent="Layout/Widgets/Keys"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="Layout/Widgets/Keys"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 0

[node name="PianoContainer" type="Container" parent="Layout/Widgets/Keys/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
mouse_filter = 0
script = ExtResource("2_kmleb")

[node name="Key0" parent="Layout/Widgets/Keys/MarginContainer/PianoContainer" instance=ExtResource("3_5hvlp")]
material = SubResource("ShaderMaterial_36g26")
layout_mode = 2
inset_right = true

[node name="Key1" parent="Layout/Widgets/Keys/MarginContainer/PianoContainer" instance=ExtResource("3_5hvlp")]
show_behind_parent = false
material = SubResource("ShaderMaterial_k8tkt")
layout_mode = 2
color = Color(0.35, 0.36, 0.38, 1)

[node name="Key2" parent="Layout/Widgets/Keys/MarginContainer/PianoContainer" instance=ExtResource("3_5hvlp")]
material = SubResource("ShaderMaterial_vfrc8")
layout_mode = 2
inset_left = true
inset_right = true

[node name="Key3" parent="Layout/Widgets/Keys/MarginContainer/PianoContainer" instance=ExtResource("3_5hvlp")]
show_behind_parent = false
material = SubResource("ShaderMaterial_311y6")
layout_mode = 2
color = Color(0.35, 0.36, 0.38, 1)

[node name="Key4" parent="Layout/Widgets/Keys/MarginContainer/PianoContainer" instance=ExtResource("3_5hvlp")]
material = SubResource("ShaderMaterial_wdfbl")
layout_mode = 2
inset_left = true

[node name="Key5" parent="Layout/Widgets/Keys/MarginContainer/PianoContainer" instance=ExtResource("3_5hvlp")]
material = SubResource("ShaderMaterial_cddi8")
layout_mode = 2
inset_right = true

[node name="Key6" parent="Layout/Widgets/Keys/MarginContainer/PianoContainer" instance=ExtResource("3_5hvlp")]
show_behind_parent = false
material = SubResource("ShaderMaterial_hyj56")
layout_mode = 2
color = Color(0.35, 0.36, 0.38, 1)

[node name="Key7" parent="Layout/Widgets/Keys/MarginContainer/PianoContainer" instance=ExtResource("3_5hvlp")]
material = SubResource("ShaderMaterial_0hgrt")
layout_mode = 2
inset_left = true
inset_right = true

[node name="Key8" parent="Layout/Widgets/Keys/MarginContainer/PianoContainer" instance=ExtResource("3_5hvlp")]
show_behind_parent = false
material = SubResource("ShaderMaterial_y3j7m")
layout_mode = 2
color = Color(0.35, 0.36, 0.38, 1)

[node name="Key9" parent="Layout/Widgets/Keys/MarginContainer/PianoContainer" instance=ExtResource("3_5hvlp")]
material = SubResource("ShaderMaterial_qftt6")
layout_mode = 2
inset_left = true
inset_right = true

[node name="Key10" parent="Layout/Widgets/Keys/MarginContainer/PianoContainer" instance=ExtResource("3_5hvlp")]
show_behind_parent = false
material = SubResource("ShaderMaterial_ltvl0")
layout_mode = 2
color = Color(0.35, 0.36, 0.38, 1)

[node name="Key11" parent="Layout/Widgets/Keys/MarginContainer/PianoContainer" instance=ExtResource("3_5hvlp")]
material = SubResource("ShaderMaterial_uegwx")
layout_mode = 2
inset_left = true

[node name="Octave" type="VBoxContainer" parent="Layout/Widgets"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 4
alignment = 1

[node name="UpOctaveButton" parent="Layout/Widgets/Octave" instance=ExtResource("5_cudr8")]
unique_name_in_owner = true
custom_minimum_size = Vector2(34, 28)
layout_mode = 2
size_flags_horizontal = 4
toggle_mode = false
text = ""
icon = ExtResource("6_r4x0v")
off_color = Color(0.150309, 0.13979, 0.175719, 1)
on_color = Color(0.161746, 0.144835, 0.197189, 1)

[node name="OctaveLabel" parent="Layout/Widgets/Octave" instance=ExtResource("7_g2f1f")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_mjkw2")
custom_minimum_size = Vector2(44, 28)
layout_mode = 2
text = "01"

[node name="DownOctaveButton" parent="Layout/Widgets/Octave" instance=ExtResource("5_cudr8")]
unique_name_in_owner = true
custom_minimum_size = Vector2(34, 28)
layout_mode = 2
size_flags_horizontal = 4
toggle_mode = false
text = ""
icon = ExtResource("9_50rvi")
off_color = Color(0.150309, 0.13979, 0.175719, 1)
on_color = Color(0.161746, 0.144835, 0.197189, 1)
